<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchTripFragment">

    <TextView
        android:id="@+id/switchDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/prefered_date"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPrice" />

    <Button
        android:id="@+id/menu_from_visited_countries_button"
        android:layout_width="111dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/menu"
        android:textColor="@color/black"
        app:backgroundTint="@color/secondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_first4" />

    <TextView
        android:id="@+id/textview_first4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/list_trips_from_recap_button"
        android:layout_width="297dp"
        android:layout_height="89dp"
        android:layout_marginTop="32dp"
        android:text="@string/travel"
        app:backgroundTint="@color/accent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputDate" />

    <TextView
        android:id="@+id/switchPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/max_price"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_from_visited_countries_button" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/euro"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/inputPrice"
        app:layout_constraintEnd_toStartOf="@+id/inputPrice"
        app:layout_constraintTop_toBottomOf="@+id/switchPrice" />

    <EditText
        android:id="@+id/inputPrice"
        android:layout_width="134dp"
        android:layout_height="42dp"
        android:autofillHints="100"
        android:ems="10"
        android:hint="@string/price"
        android:textColor="@color/black"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/switchPrice"
        app:layout_constraintStart_toStartOf="@+id/switchPrice"
        app:layout_constraintTop_toBottomOf="@+id/switchPrice"
        tools:visibility="visible" />

    <DatePicker
        android:id="@+id/inputDate"
        android:layout_width="234dp"
        android:layout_height="127dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:calendarTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchDate"
        tools:targetApi="lollipop" />

</androidx.constraintlayout.widget.ConstraintLayout>