<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MenuFragment">

    <fragment
        android:id="@+id/MenuFragment"
        android:name="com.example.tothemoon.MenuFragment"
        android:label="@string/menu_fragment_label"
        tools:layout="@layout/fragment_menu">

        <action
            android:id="@+id/action_MenuFragment_to_SearchTripFragment"
            app:destination="@id/SearchTripFragment" />
        <action
            android:id="@+id/action_MenuFragment_to_visitedCountriesFragment"
            app:destination="@id/visitedCountriesFragment" />
    </fragment>
    <fragment
        android:id="@+id/SearchTripFragment"
        android:name="com.example.tothemoon.SearchTripFragment"
        android:label="@string/search_trip_fragment_label"
        tools:layout="@layout/fragment_search_trip">

        <action
            android:id="@+id/action_SearchTripFragment_to_MenuFragment"
            app:destination="@id/MenuFragment" />
        <action
            android:id="@+id/action_SearchTripFragment_to_ListTripsFragment"
            app:destination="@id/ListTripsFragment" />
    </fragment>
    <fragment
        android:id="@+id/ListTripsFragment"
        android:name="com.example.tothemoon.ListTripsFragment"
        android:label="@string/list_trips_fragment_label"
        tools:layout="@layout/fragment_list_trips">

        <action
            android:id="@+id/action_ListTripsFragment_to_SearchTripFragment"
            app:destination="@id/SearchTripFragment" />
        <action
            android:id="@+id/action_ListTripsFragment_to_RecapTripFragment"
            app:destination="@id/RecapTripFragment" />
    </fragment>
    <fragment
        android:id="@+id/RecapTripFragment"
        android:name="com.example.tothemoon.RecapTripFragment"
        android:label="fragment_recap_trip"
        tools:layout="@layout/fragment_recap_trip" >
        <action
            android:id="@+id/action_RecapTripFragment_to_ListTripsFragment"
            app:destination="@id/ListTripsFragment" />
        <action
            android:id="@+id/action_RecapTripFragment_to_MenuFragment"
            app:destination="@id/MenuFragment" />
    </fragment>
    <fragment
        android:id="@+id/visitedCountriesFragment"
        android:name="com.example.tothemoon.VisitedCountriesFragment"
        android:label="fragment_visited_countries"
        tools:layout="@layout/fragment_visited_countries" >
        <action
            android:id="@+id/action_visitedCountriesFragment_to_MenuFragment"
            app:destination="@id/MenuFragment" />
    </fragment>
</navigation>